src/objects/FinancialAccountCustomer__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <description>reference to Parent Account</description>
        <label>Account</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Special_BillTo__c</fullName>
        <description>Special Address</description>
        <label>Address_Special_BillTo</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_To_Pay_Terms_And_Conditions_Date__c</fullName>
        <description>C2P T&amp;C Date</description>
        <label>Click_To_Pay_Terms_And_Conditions_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Click_To_Pay_Version__c</fullName>
        <description>C2P Version</description>
        <label>Click_To_Pay_Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Election_Abbreviated_Consent_Date__c</fullName>
        <description>Abbreviated Consent Date</description>
        <label>Election_Abbreviated_Consent_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Election_Overall_Consent_Date__c</fullName>
        <description>Overall Consent Date</description>
        <label>Election_Overall_Consent_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electronic_Business_Agreement_Date__c</fullName>
        <description>EBA Date</description>
        <label>Electronic_Business_Agreement_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinancialAccount__c</fullName>
        <description>reference to parent FinancialAccount</description>
        <label>FinancialAccount</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Account_Customer__c</fullName>
        <label>Financial_Account_Customer</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Financial_Account_Number__c</fullName>
        <description>external financeaccount number</description>
        <label>Financial_Account_Number</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Address_Lock_BillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Address Lock Flag (Y/N)</description>
        <label>Flag_Address_Lock_BillTo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Address_Lock_Garage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Address Lock Flag (Y/N)</description>
        <label>Flag_Address_Lock_Garage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Bankruptcy__c</fullName>
        <description>Bankruptcy Code</description>
        <label>Flag_Bankruptcy</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Home_Phone_Invalid_BillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Invalid Home Phone Number</description>
        <label>Flag_Home_Phone_Invalid_BillTo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Home_Phone_Invalid_Garage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Invalid Home Phone Number</description>
        <label>Flag_Home_Phone_Invalid_Garage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Home_Phone_IsMobile_BillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Home Phone Mobile Indicator</description>
        <label>Flag_Home_Phone_IsMobile_BillTo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Home_Phone_IsMobile_Garage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Home Phone Mobile Indicator</description>
        <label>Flag_Home_Phone_IsMobile_Garage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Home_Phone_NonLanLine_BillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Home Phone Non-Landline Indicator Flag</description>
        <label>Flag_Home_Phone_NonLanLine_BillTo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Home_Phone_NonLanLine_Garage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Home Phone Non-Landline Indicator Flag</description>
        <label>Flag_Home_Phone_NonLanLine_Garage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Military_Status__c</fullName>
        <description>Military Flag</description>
        <label>Flag_Military_Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Mobile_Phone_NonLanLine_Garage__c</fullName>
        <description>Mobile Phone Non-Landline Indicator Flag</description>
        <label>Flag_Mobile_Phone_NonLanLine_Garage</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Mobile_Phone_Non_Lan_Line_BillTo__c</fullName>
        <description>Mobile Phone Non-Landline Indicator Flag</description>
        <label>Flag_Mobile_Phone_Non_Lan_Line_BillTo</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Office_Of_Foreign_Asset_Control__c</fullName>
        <label>Flag_Office_Of_Foreign_Asset_Control</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_SCRA_Status__c</fullName>
        <description>SCRA Flag</description>
        <label>Flag_SCRA_Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Special_Handling__c</fullName>
        <description>Special Handling Flag</description>
        <label>Flag_Special_Handling</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Work_Phone_Invalid_BillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Invalid Work Phone Number</description>
        <label>Flag_Work_Phone_Invalid_BillTo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Work_Phone_Invalid_Garage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Invalid Work Phone Number</description>
        <label>Flag_Work_Phone_Invalid_Garage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Work_Phone_IsMobile_Garage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Work Phone Mobile Indicator</description>
        <label>Flag_Work_Phone_IsMobile_Garage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Work_Phone_Is_Mobile_BillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Work Phone Mobile Indicator</description>
        <label>Flag_Work_Phone_Is_Mobile_BillTo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Work_Phone_NonLanLine_BillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Work Phone Non-Landline Indicator Flag</description>
        <label>Flag_Work_Phone_NonLanLine_BillTo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Work_Phone_NonLanLine_Garage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Work Phone Non-Landline Indicator Flag</description>
        <label>Flag_Work_Phone_NonLanLine_Garage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HomePhone_BillTo__c</fullName>
        <description>Home Phone Number</description>
        <label>HomePhone_BillTo</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_PostalCode_BillTo__c</fullName>
        <description>Zip Code Ext</description>
        <label>Mailing_PostalCode_BillTo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Postal_Code_Garage__c</fullName>
        <description>Zip Code Ext</description>
        <label>Mailing_Postal_Code_Garage</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street_BillTo__c</fullName>
        <description>State</description>
        <label>Mailing_Street_BillTo</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street_Garage__c</fullName>
        <description>State</description>
        <label>Mailing_Street_Garage</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Email__c</fullName>
        <description>Marketing Email Address</description>
        <label>Marketing_Email</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <description>Mobile Number</description>
        <label>Mobile_Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Actual_Buck_Slip__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Actual Buck Slip Indicator</description>
        <label>Privacy_Actual_Buck_Slip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Privacy_Cover_Letter_Type1__c</fullName>
        <description>Cover Letter Type I</description>
        <label>Privacy_Cover_Letter_Type1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Cover_Letter_Type2__c</fullName>
        <description>Cover Letter Type II</description>
        <label>Privacy_Cover_Letter_Type2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Cover_Letter_Type3__c</fullName>
        <description>Cover Letter Type III</description>
        <label>Privacy_Cover_Letter_Type3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Affiliate_Marketing__c</fullName>
        <description>Affiliate Marketing Flag</description>
        <label>Privacy_Election_Affiliate_Marketing</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Affiliate_Sharing__c</fullName>
        <description>Affiliate Sharing Flag</description>
        <label>Privacy_Election_Affiliate_Sharing</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Annual_Letter__c</fullName>
        <description>Annual Letter Flag(used for privacy noticing)</description>
        <label>Privacy_Election_Annual_Letter</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_DealershipSource__c</fullName>
        <description>Dealer Privacy Source Flag</description>
        <label>Privacy_Election_DealershipSource</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Dealership__c</fullName>
        <description>Dealer Privacy Flag</description>
        <label>Privacy_Election_Dealership</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_FCRA_Sharing_Source__c</fullName>
        <description>FCRA Sharing Source Flag</description>
        <label>Privacy_Election_FCRA_Sharing_Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_FCRA_Sharing__c</fullName>
        <description>FCRA Sharing Flag</description>
        <label>Privacy_Election_FCRA_Sharing</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Telemarketing_Source__c</fullName>
        <description>Telemarketing Source Flag</description>
        <label>Privacy_Election_Telemarketing_Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Telemarketing__c</fullName>
        <description>Telemarketing Flag</description>
        <label>Privacy_Election_Telemarketing</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Third_Party_Sharing__c</fullName>
        <description>Third Party Sharing Flag</description>
        <label>Privacy_Election_Third_Party_Sharing</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Event_Reason__c</fullName>
        <description>Privacy Event Reason</description>
        <label>Privacy_Event_Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Expected_Buck_Slip__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Expected Buck Slip Indicator</description>
        <label>Privacy_Expected_Buck_Slip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Privacy_Last_Notice_Number__c</fullName>
        <description>Privacy Notice Number</description>
        <label>Privacy_Last_Notice_Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Notice_Sent__c</fullName>
        <description>Privacy Notice sent flag</description>
        <label>Privacy_Notice_Sent</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Pending_End_Date__c</fullName>
        <description>Pend End Date</description>
        <label>Privacy_Pending_End_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Privacy_Pending_Start_Date__c</fullName>
        <description>Pend Start Date</description>
        <label>Privacy_Pending_Start_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ResultsHome_Phone_Delivery_Garage__c</fullName>
        <description>Home Phone Number Delivery Results</description>
        <label>ResultsHome_Phone_Delivery_Garage</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Results_Home_Phone_Delivery_BillTo__c</fullName>
        <description>Home Phone Number Delivery Results</description>
        <label>Results_Home_Phone_Delivery_BillTo</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Results_Work_Phone_Delivery_BillTo__c</fullName>
        <description>Work Phone Number Delivery Results</description>
        <label>Results_Work_Phone_Delivery_BillTo</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Results_Work_Phone_Delivery_Garage__c</fullName>
        <description>Work Phone Number Delivery Results</description>
        <label>Results_Work_Phone_Delivery_Garage</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Servicing_Email__c</fullName>
        <description>Account Servicing Email Address</description>
        <label>Servicing_Email</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Universal_Customer_Id__c</fullName>
        <description>external UCID</description>
        <label>Universal_Customer_Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Source__c</fullName>
        <description>Source of Update</description>
        <label>Update_Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone_Bill_To__c</fullName>
        <description>Work Phone Number</description>
        <label>Work_Phone_Bill_To</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xxxAffiliate_Sharing_Source__c</fullName>
        <description>Affiliate Sharing Source Flag</description>
        <label>xxxAffiliate_Sharing_Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xxx_Business_Agreement_Date__c</fullName>
        <description>C2P EBA Date</description>
        <label>xxx_Business_Agreement_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xxx_Party_Sharing_Source__c</fullName>
        <description>Third Party Sharing Source Flag</description>
        <label>xxx_Party_Sharing_Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>FinancialAccountCustomer</label>
    <nameField>
        <label>FinancialAccountCustomer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FinancialAccountCustomer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>